remove white spacer in language bar - fixes #823

--- a/github-dark.css
+++ b/github-dark.css
@@ -3241,7 +3241,7 @@
   .metabox .editable-text:hover, #inbox .list .item .title span,
   .Subhead.border-bottom-0 {
     background-color: transparent !important;
-    border: 0 !important;
+    border: none !important;
   }
   /* Panels */
   #posts #rss, .signup-button, .hero h1, .plan.personal, .caption,
@@ -3706,8 +3706,9 @@
   .file .image .border-wrap, .site-search .chromeless-input,
   .profile-timeline-card-wrapper, .render-shell img, img.asset,
   .AvatarStack--right .avatar, .AvatarStack-body .avatar,
-  .sidebar-notifications .thread-subscription-status {
-    border: 0 !important;
+  .sidebar-notifications .thread-subscription-status,
+  .repository-lang-stats-graph .language-color:not(:first-child) {
+    border: none !important;
   }
   .dashboard-tabs a {
     border-left: 0 !important;
